<resources>
    <string name="app_name">HelloBleScanner</string>
    <string name="action_scan">Scan</string>
    <string name="action_clear">Clear</string>
    <string name="action_sortby_address">Sort By Address</string>
    <string name="action_sortby_name">Sort By Name</string>
    <string name="action_sortby_signal_level_rssi">Sort By RSSI</string>
    <string name="action_sortby_age">Sort By Age</string>
    <string name="action_sortby_timeout_remaining">Sort By Timeout Remaining</string>

    <string name="select_ringtone">Select Ringtone</string>
</resources>